--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="time_left">Tempo: %s</string>
     <string name="tap_me">Click!</string>
     <string name="game_over_message"> Acabou o tempo! Sua pontuação foi: %s</string>
+    <string name="about_menu">About</string>
+    <string name="about_title">ClickClick %s</string>
+    <string name="about_message">Criado por:\nAléxis Toigo\nGabriel Brock\n\n\nDisciplina: Linguagem de Programação III</string>
 </resources>
